--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
+.Login {
+    font: bold;
+    color: blue;
+    text-decoration: underline;
+    font-size: 30px;
+    padding-left: 8%;
+}
 body {
     background-color: #fffee0;
 }
